fix registring Attendant

--- a/Views/Admin/GetAdminByEmail.cshtml
+++ b/Views/Admin/GetAdminByEmail.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div>
-	<p> <a asp-action="GetAllAdmin">View all admin.</a></p>
+	<p> <a asp-action="GetAllAdmins">View all admin.</a></p>
 </div>
 <div>
 	<h1> Details...</h1>
