--- a/Views/Attendant/UpdateAttendantPassword.cshtml
+++ b/Views/Attendant/UpdateAttendantPassword.cshtml
@@ -1,5 +1,32 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+﻿@model SMS_MVCAPP.Models.Entities.User
+@*
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+
 }
+
+<div>
+	<p>Update Attendant password..</p>
+</div>
+
+<div>
+	<a asp-action="GetAllAttendants"> Get All Attendant..</a>
+</div>
+
+<div>
+	<form asp-action="UpdateAttendantPassword" method="post">
+		<div>
+			<input name="StaffId" value="@Model.StaffId" readonly />
+		</div>
+
+		<div>
+			<label for="pwd" asp-for="Password"></label>
+			<input type="password" id="pwd" name="Password" />
+		</div>
+
+		<div>
+			<input type="submit" value="Submit" />
+		</div>
+	</form>
+</div>
