--- a/Views/Admin/UpdateAdminPassword.cshtml
+++ b/Views/Admin/UpdateAdminPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SMS_MVCAPP.Models.Entities.User
+﻿@model SMS_MVCAPP.Models.Entities.Admin
 @*
 	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
