--- a/Views/Attendant/GetAllAttendants.cshtml
+++ b/Views/Attendant/GetAllAttendants.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SMS_MVCAPP.Models.Entities.User>
+﻿@model IEnumerable<SMS_MVCAPP.Models.Entities.Attendant>
 @*
 	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
