transaction and product implementation

--- a/Views/Attendant/GetAttendantByEmail.cshtml
+++ b/Views/Attendant/GetAttendantByEmail.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div>
-	<p> <a asp-action="GetAllAttendant">View all admin.</a></p>
+	<p> <a asp-action="GetAllAttendants">View all admin.</a></p>
 </div>
 <div>
 	<h1> Details...</h1>
