--- a/Views/Attendant/DeleteAttendantConfirmPage.cshtml
+++ b/Views/Attendant/DeleteAttendantConfirmPage.cshtml
@@ -24,5 +24,5 @@
 </div>
 <div>
 	@*<p><a asp-action="DeleteAdmin" asp-route-staffId="@Model.StaffId">Delete..</a> </p>*@
-	<p> Do you want to delete? <a asp-action="DeleteAttendant" asp-route-staffId="@Model.StaffId">Confirm.</a>|| <a asp-action="GetAllAttendant">Reject.</a></p>
+	<p> Do you want to delete? <a asp-action="DeleteAttendant" asp-route-staffId="@Model.StaffId">Confirm.</a>|| <a asp-action="GetAllAttendants">Reject.</a></p>
 </div>
