added producct and view all product

--- a/Views/Admin/AdminPage.cshtml
+++ b/Views/Admin/AdminPage.cshtml
@@ -7,9 +7,9 @@
     ViewData["Title"] = "Admin Dashboard";
 }
 
-@if (TempData["Sucess"] != null)
+@if (TempData["Success"] != null)
 {
-    <h2>@TempData["sucess"]</h2>
+    <h2>@TempData["success"]</h2>
 }
 
 <div class="text-center">
