--- a/Views/Product/GetProductByBarCode.cshtml
+++ b/Views/Product/GetProductByBarCode.cshtml
@@ -6,3 +6,28 @@
 }
 
 <h2>title</h2>
+
+<div>
+	<p> <a asp-action="GetAllProducts">View all admin.</a></p>
+</div>
+<div>
+	<h1> Details...</h1>
+</div>
+<div>
+
+	<h4>@DateTime.Now</h4>
+</div>
+<div>
+	<p>@Html.DisplayFor(x => x.BarCode) </p>
+	<p> @Model.ProductName </p>
+	<p> @Model.SellingPrice @Model.ProductQuantity</p>
+	<p> @Model.CreatedDate</p>
+	<p> @Model.ProductCategory</p>
+	<p> @Model.ProductQuantity</p>
+	<p> @Model.BarCode</p>
+
+
+</div>
+<div>
+	@*<p><a asp-action="DeleteAdmin" asp-route-staffId="@Model.StaffId">Delete..</a></p>*@
+</div>
