--- a/Views/Product/GetProductByCategory.cshtml
+++ b/Views/Product/GetProductByCategory.cshtml
@@ -5,4 +5,39 @@
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+<h2>wWitle</h2>
+
+<div>
+        
+    <table>
+        <thead>
+        <tr>
+            <th> BarCode </th>
+            <th>Product Name</th>
+            <th>Selling Price</th>
+            <th>Product Quantity</th>
+            <th>Product Category</th>
+            <th>Created Date</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.BarCode</td>
+                <td>@item.ProductName</td>
+                <td>@item.SellingPrice</td>
+                <td>@item.ProductQuantity</td>
+                <td>@item.ProductCategory</td>
+                <td>@item.CreatedDate</td>
+                
+                @* <td> <a asp-action="GetProductByBarCode" asp-route-barCode="@item.BarCode">GEt by Barcode..</a></td> *@
+                @* <td><a asp-action="GetProductByCategory" asp-route-category="@item.ProductCategory">Get by Category...</a></td> *@
+                @* <td><a asp-action="DeleteProduct" asp-route-barCode="@item.BarCode">Delete by BarCode...</a></td> *@
+                @* <td><a asp-action="UpdateProduct" asp-route-barCode="@item.BarCode">Update...</a></td> *@
+               
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
