--- a/Views/Admin/LoginAdmin.cshtml
+++ b/Views/Admin/LoginAdmin.cshtml
@@ -1,8 +1,8 @@
 ﻿@model SMS_MVCAPP.Models.Entities.Admin
-
+    @{ Layout = null;}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <!-- Design by foolishdeveloper.com -->
     <title>PIEMART- REGISTER -LOGIN</title>
 
