--- a/Views/Admin/CreateAdmin.cshtml
+++ b/Views/Admin/CreateAdmin.cshtml
@@ -1,55 +1,4 @@
 ﻿@model SMS_MVCAPP.Models.Entities.Admin
-@*
-	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@*
-		
-*@
-
-@* <p>Registration Page </p> *@
-@* <div> *@
-@* 	<form asp-action="CreateAdmin"> *@
-@* 		<div> *@
-@* 			<label for="email" asp-for="Email"></label> *@
-@* 			<input type="email" placeholder="example@mail.com" id="email" name="Email" /> *@
-@* 		</div> *@
-@* *@
-@* 		<div> *@
-@* 			<label for="fname" asp-for="FirstName"></label> *@
-@* 			<input id="fname" name="FirstName" /> *@
-@* 		</div> *@
-@* *@
-@* 		<div> *@
-@* 			<label for="lname" asp-for="LastName"></label> *@
-@* 			<input id="lname" name="LastName" /> *@
-@* 		</div> *@
-@* 		<div> *@
-@* 			<label for="gen" asp-for="Gender"></label> *@
-@* 			<input id="gen" name="Gender" /> *@
-@* 		</div> *@
-@* 		<div> *@
-@* 			<label for="addr" asp-for="HomeAddress"></label> *@
-@* 			<input id="addr" name="HomeAddress" /> *@
-@* 		</div> *@
-@* 		<div> *@
-@* 			<label for="gar" asp-for="GuarantorName"></label> *@
-@* 			<input id="gar" name="GuarantorName" /> *@
-@* 		</div> *@
-@* 		<div> *@
-@* 			<label for="pwd" asp-for="Password"></label> *@
-@* 			<input type="password" id="pwd" name="Password" /> *@
-@* 		</div> *@
-@* 		<div> *@
-@* 			<label for="pno" asp-for="PhoneNumber"> </label> *@
-@* 			<input type="tel" id="pno" pattern="[0]{1}[7-9]{1}[0-1]{1}[0-9]{8}" placeholder="08123456789" name="PhoneNumber" /> *@
-@* 		</div> *@
-@* *@
-@* 		<div> *@
-@* 			<input type="submit" value="Submit" /> *@
-@* 		</div> *@
-@* 	</form> *@
-@* </div> *@
-
 
     @{ Layout = null;}
 <!DOCTYPE html>
@@ -61,138 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <!--Stylesheet-->
-    <style media="screen">
-        *,
-        *:before,
-        *:after{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        body{
-            background-color: #080710;
-        }
-        .background{
-            width: 430px;
-            height: 520px;
-            position: absolute;
-            transform: translate(-50%,-50%);
-            left: 50%;
-            top: 50%;
-        }
-        .background .shape{
-            height: 200px;
-            width: 200px;
-            position: absolute;
-            border-radius: 50%;
-        }
-        .shape:first-child{
-            background: linear-gradient(
-                    #1845ad,
-                    #23a2f6
-            );
-            left: -80px;
-            top: -80px;
-        }
-        .shape:last-child{
-            background: linear-gradient(
-                    to right,
-                    #ff512f,
-                    #f09819
-            );
-            right: -30px;
-            bottom: -80px;
-        }
-        form{
-            height: 740px;
-            width: 400px;
-            background-color: rgba(255,255,255,0.13);
-            position: absolute;
-            transform: translate(-50%,-50%);
-            top: 60%;
-            left: 50%;
-            border-radius: 30px;
-            backdrop-filter: blur(15px);
-            border: 2px solid rgba(255,255,255,0.1);
-            box-shadow: 0 0 40px rgba(8,7,16,0.6);
-            padding: 50px 35px;
-        }
-        form *{
-            font-family: 'Poppins',sans-serif;
-            color: #ffffff;
-            letter-spacing: 0.5px;
-            outline: none;
-            border: none;
-        }
-        form h3{
-            font-size: 32px;
-            font-weight: 500;
-            line-height: 42px;
-            text-align: center;
-        }
 
-        label{
-            display: block;
-            margin-top: 10px;
-            font-size: 16px;
-            font-weight: 500;
-        }
-        input{
-            display: block;
-            height: 50px;
-            width: 100%;
-            background-color: rgba(255,255,255,0.07);
-            border-radius: 3px;
-            padding: 0 10px;
-            margin-top: 5px;
-            font-size: 14px;
-            font-weight: 300;
-        }
-        ::placeholder{
-            color: #e5e5e5;
-        }
-        /*login  button*/
-        button{
-            margin-top: 20px;
-            width: 100%;
-            background-color: #c9c8c8;
-            color: #050411;
-            padding: 15px 0;
-            font-size: 18px;
-            font-weight: 600;
-            border-radius: 5px;
-            cursor:pointer;
-        }
-        .social{
-            margin-top: 30px;
-            display: flex;
-        }
-        .social div{
-            background: red;
-            width: 150px;
-            border-radius: 3px;
-            padding: 5px 10px 10px 5px;
-            background-color: rgba(255,255,255,0.27);
-            color: #eaf0fb;
-            text-align: center;
-            cursor:pointer;
-        }
-        .social div:hover{
-            background-color: rgba(255,255,255,0.47);
-        }
-        .social .fb{
-            margin-left: 25px;
-        }
-        .social i{
-            margin-right: 4px;
-        }
-
-    </style>
 </head>
 <body>
 <div class="background">
-<!--    <div class="shape"></div>-->
     <div class="shape"></div>
     <div class="shape"></div>
 </div>
@@ -226,17 +47,14 @@
     <label for="pwd" asp-for="Password"></label>
     <input placeholder="password" type="password" id="pwd" name="Password">
 
-
+@* 
     <label for="password">Password <i class='fas fa-user-secret'></i></label>
-    <input type="password" placeholder="Password" id="password">
+    <input type="password" placeholder="Password" id="password"> *@
 
     <button><i class='fas fa-user-check'style='color:#080710'></i> Register </button>
-<!--    <button>Register</button>-->
     <div class="social">
-<!--        <div class="go"><i class="fab fa-google"></i>  Google</div>-->
-        <div class="go"><i class='fas fa-user-circle'></i> Register</div>
-        <div class="fb"><i class='fas fa-user-check'></i>  Login</div>
-<!--        <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>-->
+        <div class="go"><a asp-action="CreateAdmin"><i class='fas fa-user-circle'></i> Register</a></div>
+        <div class="fb"><a asp-action="LoginAdmin"><i class='fas fa-user-check'></i> Login</a> </div>
     </div>
 </form>
 </body>
