--- a/Views/Admin/AdminPage.cshtml
+++ b/Views/Admin/AdminPage.cshtml
@@ -1,9 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@{
+﻿@{
     ViewData["Title"] = "Admin Dashboard";
 }
 
@@ -11,10 +6,170 @@
 {
     <h2>@TempData["success"]</h2>
 }
-
-<div class="text-center">
+ @{ Layout = null;}
+@* <div class="text-center">
     <h1 class="display-4">Logged in successful</h1>
-    
+
     <p>Admin <a asp-area="" asp-controller="Admin" asp-action="GetAllAdmins">GO HOME</a>.</p>
 
-</div>
+    </div> *@
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Admin-Dashboard | PIEMALL</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Font Awesome Cdn Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
+
+</head>
+
+<body>
+    <header class="header">
+        <div class="logo">
+            <a href="#">PIEMALL</a>
+            <div class="search_box">
+                <input type="text" placeholder="Search PIEMALL" />
+                <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+
+        <div class="header-icons">
+            <i class="fas fa-bell"></i>
+            <div class="account">
+                <img src="./pic/img.jpg" alt="" />
+                <h4>Logged Attendant</h4>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <nav>
+            <div class="side_navbar">
+                <span>Main Menu</span>
+                <a asp-action="AdminPage" class="active">Dashboard</a>
+                <a href="#">Profile</a>
+                <a href="#">Manage Attendant</a>
+                <a href="#">Manage Products</a>
+                <a href="#">Manage Inventory</a>
+                <a href="#">History</a>
+                <a href="#">My Account</a>
+                <a href="#">Documents</a>
+
+            </div>
+        </nav>
+
+        <div class="main-body">
+            <h2>Dashboard</h2>
+            <div class="promo_card">
+                <h1>Welcome to PIEMALL</h1>
+                <span>The lowest price you can trust.</span>
+                <button>Learn More</button>
+            </div>
+
+            <div class="history_lists">
+                <div class="list1">
+                    <div class="row">
+                        <h4>Recent Transaction..</h4>
+                        <a href="#">See all</a>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Dates</th>
+                                <th>Cust. Name</th>
+                                <th>Products</th>
+                                <th>Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>2, Aug, 2022</td>
+                                <td>Sam Tonny</td>
+                                <td>Premimum</td>
+                                <td>$2000.00</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>29, July, 2022</td>
+
+                                <td>Code Info</td>
+                                <td>Silver</td>
+                                <td>$5,000.00</td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="list2">
+                    <div class="row">
+                        <h4>Inventory Updated.</h4>
+                        <a href="#">Upload</a>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Products Name</th>
+                                <th>Barcode</th>
+                                <th>Qty</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>CNIC</td>
+                                <td>62543</td>
+                                <td>20</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Passport</td>
+                                <td>23434</td>
+                                <td>12</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Licence</td>
+                                <td>34535</td>
+                                <td>9</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Pic</td>
+                                <td>3543534</td>
+                                <td>22</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>CNIC</td>
+                                <td>35453</td>
+                                <td>22</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>Maggi</td>
+                                <td>234423</td>
+                                <td>22</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="sidebar">
+
+        </div>
+    </div>
+</body>
+
+</html>
